--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,12 @@ python:
   - "3.7"
   - "3.8"
 install:
-  - [ -f requirements.txt ] && pip install -r requirements.txt || echo 'requirements.txt does not exists'
-  - [ -f dev-requirements.txt ] && pip install -r dev-requirements.txt || echo 'dev-requirements.txt does not exists'
+  - "[ -f requirements.txt ] && pip install -r requirements.txt || echo 'requirements.txt does not exists'"
+  - "[ -f dev-requirements.txt ] && pip install -r dev-requirements.txt || echo 'dev-requirements.txt does not exists'"
   - python setup.py install
 
 script:
-  - python tests/test.py
+  - "python tests/test.py"
 branches:
   only:
   - master
